fixes agenda on mobile

--- a/2018/src/scss/_global.scss
+++ b/2018/src/scss/_global.scss
@@ -15,6 +15,10 @@ body, html {
   }
 }
 
+.centered {
+  margin: 0 auto;
+}
+
 .button {
   color: $color-white !important;
   border-width: 3px;
